# Mouscribe

./: .coveragerc  .flake8  .gitignore  .pipeline-monitor-config  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  WINDOWS_NOTIFICATIONS.md  audio_database.db  build.bat  build.ps1  build.py  config.toml  debug_api.py  demo_toast.py  install.bat  main.py  mypy.ini  pipeline_monitor.py  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements-linux.txt  requirements-windows.txt  requirements.txt  run_tests.py  setup.py  setup_dev.py  setup_git_hooks.py  setup_pipeline_monitoring.py  test_hook.txt  test_input_handler.py  test_monitor.py  test_notifications.py  test_pipeline.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-develop.yml  ci-cd.yml  feature-branch-workflow.yml  setup-branch-protection.yml
audio/: recording_20250814_164438_457.wav.npy  recording_20250814_164449_950.wav.npy  recording_20250814_164452_503.wav.npy
data/: audio_database.db
data/audio/: recording_20250814_170934_851.wav.npy  recording_20250814_171020_507.wav.npy  recording_20250815_083853_394.wav.npy  recording_20250815_114008_048.wav.npy  recording_20250815_115739_369.wav.npy  recording_20250815_115905_064.npy  recording_20250815_120210_501.npy  recording_20250815_120745_646.npy  recording_20250815_120757_577.npy  recording_20250819_162422_967.npy
docs/: BRANCH_PROTECTION_SETUP.md  CUSTOM_DICTIONARY.md  DEVELOPMENT.md  INSTALLATION.md  PIPELINE_MONITORING.md  README.md  REQUIREMENTS.md
icons/: mauscribe_icon.cur  mauscribe_recording.cur  mouse_recording.cur
src/: __init__.py  config.py  custom_dictionary.py  dictionary_gui.py  dictionary_manager.py  input_handler.py  logger.py  main.py  mouscribe.py  recorder.py  sound_controller.py  spell_checker.py  stt.py  updater.py
src/audio/: recorder.py  volume_controller.py
src/input/: __init__.py  input_filter.py  input_handler.py  keyboard_handler.py  keys.py  mouse_handler.py
src/lang/: spell_checker.py  stt.py
src/ui/: database_gui.py  dictionary_gui.py  notifications.py  system_tray.py  windows_notifications.py
src/utils/: __init__.py  config.py  database.py  dictionary.py  logger.py  updater.py
templates/: README.md  post-commit  post-push  pre-commit  pre-push
tests/: __init__.py  test_button_mapper.py  test_config.py  test_custom_dictionary.py  test_dictionary_gui.py  test_dictionary_manager.py  test_input_filter.py  test_input_handler.py  test_main.py  test_recorder.py  test_simple.py  test_sound_controller.py  test_spell_checker.py  test_stt.py  test_updater.py
voice_control/: __init__.py  actions.py  audio.py  config.py  cursor_manager.py  input_handler.py  main.py  stt.py
